# peripherals_5g

./: CMakeLists.txt  README.md
include/: 5g.h
src/: modem_5g_core.c  modem_5g_core.h
src/drivers/: drv_uart_mr880a.c
test/: test_5g_mr880a.c
